--- a/assets/css/w3.css
+++ b/assets/css/w3.css
@@ -180,7 +180,7 @@ textarea {
 /* End extract */
 html,
 body {
-  font-family: 'Staatliches', cursive;
+  font-family: Verdana, sans-serif;
   font-size: 15px;
   line-height: 1.5;
 }
