--- a/assets/css/personal.css
+++ b/assets/css/personal.css
@@ -3,19 +3,19 @@ footer,
 h1,
 h2,
 h3 {
-  font-family: 'Staatliches', 'cursive' !important;
+  font-family: 'Staatliches', 'cursive';
 }
 h1,
 h2,
 h3 {
-  color: #0d2b66 !important;
+  color: #0d2b66;
   line-height: normal;
   padding-bottom: 10px;
 }
 h4,
 h5,
 h6 {
-  color: #47546b !important;
+  color: #47546b;
   line-height: normal;
   padding-bottom: 10px;
 }
@@ -23,18 +23,33 @@ p,
 h4,
 h5,
 h6 {
+  font-family: 'Montserrat', 'sans-serif';
+}
+.font-staatliches {
+  font-family: 'Staatliches', 'cursive' !important;
+}
+.font-montserrat {
   font-family: 'Montserrat', 'sans-serif' !important;
 }
-#content {
-  padding: 48px 0;
+.fontsize-medium {
+  font-size: 28px !important;
+}
+.fontsize-small {
+  font-size: 16px !important;
 }
 .intro {
   min-height: 100vh;
   position: relative;
 }
+.background-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
 .horizontally-centered {
   float: none;
-  margin: auto !important;
+  margin: auto;
   display: grid;
 }
 .vertically-centered {
@@ -47,6 +62,12 @@ h6 {
 .border-top {
   border-top: 1px solid rgba(255, 255, 255, 0.438) !important;
 }
+.zero-padding-top {
+  padding-top: 0 !important;
+}
+.margin-bottom-large {
+  margin-bottom: 50px;
+}
 .underline-animation-dark::after {
   content: '';
   display: block;
@@ -57,7 +78,7 @@ h6 {
 }
 .underline-animation-dark:hover::after {
   width: 100%;
-  background: #041a47 !important;
+  background: #041a47;
 }
 .underline-animation-light::after {
   content: '';
@@ -69,19 +90,21 @@ h6 {
 }
 .underline-animation-light:hover::after {
   width: 100%;
-  background: white !important;
+  background: white;
 }
-.zero-padding-top {
-  padding-top: 0 !important;
+.zoom-animate {
+  transition: transform 0.2s;
 }
-.margin-bottom-large {
-  margin-bottom: 50px !important;
+.zoom-animate:hover {
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  transform: scale(1.1);
 }
 .hide-animate {
   visibility: hidden;
 }
 .animation-in {
-  visibility: visible !important;
+  visibility: visible;
   animation-delay: 0.2s;
   animation-name: fadeInUp;
   animation-duration: 1s;
@@ -108,6 +131,9 @@ h6 {
   }
 }
 @media (max-width: 1000px) {
+  .font-jumbo {
+    font-size: 45px !important;
+  }
   .w3-xxxlarge {
     font-size: 30px !important;
   }
