--- a/assets/css/personal.css
+++ b/assets/css/personal.css
@@ -4,20 +4,16 @@ h1,
 h2,
 h3 {
   font-family: 'Staatliches', 'cursive';
-}
-h1,
-h2,
-h3 {
   color: #0d2b66;
+}
+h1 {
   line-height: normal;
-  padding-bottom: 10px;
 }
 h4,
 h5,
 h6 {
   color: #47546b;
   line-height: normal;
-  padding-bottom: 10px;
 }
 p,
 h4,
@@ -31,21 +27,12 @@ h6 {
 .font-montserrat {
   font-family: 'Montserrat', 'sans-serif' !important;
 }
-.fontsize-medium {
-  font-size: 28px !important;
-}
-.fontsize-small {
-  font-size: 16px !important;
-}
 .intro {
   min-height: 100vh;
   position: relative;
 }
-.background-overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+.background-gradient {
+  background-image: linear-gradient(180deg, #f7f8fc 0%, #e9e9f4 100%);
 }
 .horizontally-centered {
   float: none;
@@ -65,8 +52,8 @@ h6 {
 .zero-padding-top {
   padding-top: 0 !important;
 }
-.margin-bottom-large {
-  margin-bottom: 50px;
+.margin-bottom {
+  margin-bottom: 25px;
 }
 .underline-animation-dark::after {
   content: '';
@@ -131,19 +118,8 @@ h6 {
   }
 }
 @media (max-width: 1000px) {
-  .font-jumbo {
-    font-size: 45px !important;
-  }
-  .w3-xxxlarge {
-    font-size: 30px !important;
-  }
-  .w3-xxlarge {
-    font-size: 26px !important;
-  }
-  .w3-xlarge {
-    font-size: 18px !important;
-  }
-  .w3-large {
-    font-size: 15px !important;
+  html,
+  body {
+    font-size: 13px;
   }
 }
