--- a/assets/css/personal.css
+++ b/assets/css/personal.css
@@ -37,6 +37,12 @@ h6 {
 .background-gradient {
   background-image: linear-gradient(180deg, #f7f8fc 0%, #e9e9f4 100%);
 }
+.background-overlay {
+  background-color: #000000a1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
 .horizontally-centered {
   float: none;
   margin: auto;
