--- a/assets/css/personal.css
+++ b/assets/css/personal.css
@@ -30,9 +30,16 @@ h6 {
 .section-title {
   font-size: 3rem;
 }
+.link {
+  font-size: 1.5rem;
+  text-decoration: underline;
+}
 .intro {
   min-height: 100vh;
   position: relative;
+}
+.flex {
+  display: flex;
 }
 .background-gradient {
   background-image: linear-gradient(180deg, #f7f8fc 0%, #e9e9f4 100%);
@@ -70,17 +77,28 @@ h6 {
 .shadow {
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.block {
+  display: block !important;
+  visibility: hidden !important;
+  opacity: 0 !important;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+}
+.fade-in {
+  visibility: visible !important;
+  opacity: 1 !important;
+  transition-delay: 0s !important;
+}
 .underline-animation::after {
   content: '';
   display: block;
   width: 0;
   height: 1px;
-  background: var(--underline-color,#041a47);
+  background: var(--underline-color, #041a47);
   transition: width 0.3s;
 }
 .underline-animation:hover::after {
   width: 100%;
-  background: var(--underline-color,#041a47);
+  background: var(--underline-color, #041a47);
 }
 .zoom-animate {
   transition: transform 0.2s;
