--- a/assets/css/personal.css
+++ b/assets/css/personal.css
@@ -41,6 +41,9 @@ h6 {
 .flex {
   display: flex;
 }
+.grid {
+  display: grid;
+}
 .background-gradient {
   background-image: linear-gradient(180deg, #f7f8fc 0%, #e9e9f4 100%);
 }
