--- a/assets/css/personal.css
+++ b/assets/css/personal.css
@@ -71,6 +71,10 @@ h6 {
 .zero-padding-top {
   padding-top: 0 !important;
 }
+.margin-separator {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
 .margin-bottom {
   margin-bottom: 25px;
 }
@@ -148,5 +152,11 @@ h6 {
   }
   .section-title {
     font-size: 2.5rem;
+  }
+  .horizontally-centered {
+    display: block;
+  }
+  .flex {
+    flex-wrap: wrap;
   }
 }
